--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -158,3 +158,6 @@ beta11	2007/11/27
 ・プログレス表示の経過を、longで管理するようにした（今まではint）。これで2.1GB以上のファイルをコピー、移動するときに桁あふれして表示がおかしくなる問題が解決した。
 ・ファイラー画面、テキストビューアでフォーカスがない場合にグレー表示にするようにした。残すか悩み中なんで意見求む。
 ・サムネイルモードでは、カーソル左右でのアクティブタブ切り替え、親ディレクトリ移動を無効にした。
+
+beta12
+・インクリメンタルサーチにJ/Migemoを導入した。
