--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -160,4 +160,6 @@ beta11	2007/11/27
 ・サムネイルモードでは、カーソル左右でのアクティブタブ切り替え、親ディレクトリ移動を無効にした。
 
 beta12
-・インクリメンタルサーチにJ/Migemoを導入した。
+・インクリメンタルサーチの動作を変更した。時間制でのバッファのクリアを廃止。バッファが空ではないときにバックスペースが押されると一文字削除。検索文字入力以外が行われたらインクリメンタルサーチ終了。Ctrl＋↑or↓での同キーでのサーチ後、キャッシュを編集できるようにした。
+・J/Migemo導入（インクリメンタルサーチ、Find、Grep、テキストビューア）
+・Windowsで外部コマンド実行時、禁止文字を「^」でエスケープするようにした（Xキーでのファイル実行ではエスケープ済みのファイル名が出ます）。
