--- a/trunk/src/text_viewer_ja.properties
+++ b/trunk/src/text_viewer_ja.properties
@@ -5,3 +5,4 @@ search_prev=\u524d\u691c\u7d22
 search_next=\u6b21\u691c\u7d22
 title=jFD2 - Search
 use_regex=\u6b63\u898f\u8868\u73fe\u3092\u4f7f\u3046
+use_migemo=migemo\u3092\u4f7f\u3046
