--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -280,3 +280,5 @@ afx_style_cursor=\u30ab\u30fc\u30bd\u30eb\u5de6\u53f3\u3067\u30a2\u30af\u30c6\u3
 slideshow=\u30b9\u30e9\u30a4\u30c9\u30b7\u30e7\u30fc
 unpack_create_dir=\u30d5\u30a1\u30a4\u30eb\u3068\u540c\u540d\u306e\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306b\u89e3\u51cd\u3059\u308b
 unpack_overwrite_dialog=\u4e0a\u66f8\u304d\u78ba\u8a8d\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u8868\u793a\u3059\u308b
+
+use_migemo=migemo\u3092\u4f7f\u7528\u3059\u308b
