--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -163,3 +163,5 @@ beta12
 ・インクリメンタルサーチの動作を変更した。時間制でのバッファのクリアを廃止。バッファが空ではないときにバックスペースが押されると一文字削除。検索文字入力以外が行われたらインクリメンタルサーチ終了。Ctrl＋↑or↓での同キーでのサーチ後、キャッシュを編集できるようにした。
 ・J/Migemo導入（インクリメンタルサーチ、Find、Grep、テキストビューア）
 ・Windowsで外部コマンド実行時、禁止文字を「^」でエスケープするようにした（Xキーでのファイル実行ではエスケープ済みのファイル名が出ます）。
+・非アクティブ時にカーソルを表示しない機能を追加
+・設定画面に、非アクティブペインの文字色、非アクティブ時にカーソルを表示しないか、非アクティブ時に文字色を変えるかの設定を追加した。
