--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -282,3 +282,6 @@ unpack_create_dir=\u30d5\u30a1\u30a4\u30eb\u3068\u540c\u540d\u306e\u30c7\u30a3\u
 unpack_overwrite_dialog=\u4e0a\u66f8\u304d\u78ba\u8a8d\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u8868\u793a\u3059\u308b
 
 use_migemo=migemo\u3092\u4f7f\u7528\u3059\u308b
+inactive=\u975e\u30d5\u30a9\u30fc\u30ab\u30b9\u6642
+cursor_requires_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u30ab\u30fc\u30bd\u30eb\u306f\u8868\u793a\u3057\u306a\u3044
+change_color_with_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u6587\u5b57\u8272\u3092\u5909\u3048\u308b
