migemo-0.004.jar Macのフォーカス有無表示変更

--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -165,3 +165,5 @@ beta12
 ・Windowsで外部コマンド実行時、禁止文字を「^」でエスケープするようにした（Xキーでのファイル実行ではエスケープ済みのファイル名が出ます）。
 ・非アクティブ時にカーソルを表示しない機能を追加
 ・設定画面に、非アクティブペインの文字色、非アクティブ時にカーソルを表示しないか、非アクティブ時に文字色を変えるかの設定を追加した。
+・Groovy実行コマンド（com.nullfish.app.jfd2.command.groovy.GroovyCommand）で、フルパスでないパスが指定された場合、スクリプトディレクトリ以下を参照するようにした。
+・Macでペインのアクティブ、非アクティブの判別がおかしかったのを修正。
