--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -167,3 +167,9 @@ beta12
 ・設定画面に、非アクティブペインの文字色、非アクティブ時にカーソルを表示しないか、非アクティブ時に文字色を変えるかの設定を追加した。
 ・Groovy実行コマンド（com.nullfish.app.jfd2.command.groovy.GroovyCommand）で、フルパスでないパスが指定された場合、スクリプトディレクトリ以下を参照するようにした。
 ・Macでペインのアクティブ、非アクティブの判別がおかしかったのを修正。
+
+beta12_2
+・テキストビューアの左右キーでのスクロールにバグがあったので修正した。
+・テキストビューアの前方検索にバグがあったので修正した。
+・フォーカス有無判別アルゴリズムにバグがあったので修正した。
+・マニフェストファイルが間違っていたので修正した
