--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -168,9 +168,14 @@ beta12
 ・Groovy実行コマンド（com.nullfish.app.jfd2.command.groovy.GroovyCommand）で、フルパスでないパスが指定された場合、スクリプトディレクトリ以下を参照するようにした。
 ・Macでペインのアクティブ、非アクティブの判別がおかしかったのを修正。
 
-beta12_2
+beta12 rev.2
 ・テキストビューアの左右キーでのスクロールにバグがあったので修正した。
 ・テキストビューアの前方検索にバグがあったので修正した。
 ・フォーカス有無判別アルゴリズムにバグがあったので修正した。
 ・マニフェストファイルが間違っていたので修正した
 ・J/Migemoを0.005に変更
+
+beta12 rev.3
+・外部コマンド呼び出しのバグをつぶした。
+・外部コマンド呼び出しでのWindows用文字エスケープ処理を変更。ダブルクォートもエスケープするようにした。
+
