--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -178,4 +178,7 @@ beta12 rev.2
 beta12 rev.3
 ・外部コマンド呼び出しのバグをつぶした。
 ・外部コマンド呼び出しでのWindows用文字エスケープ処理を変更。ダブルクォートもエスケープするようにした。
+・外部コマンドの切り替えの挙動を変更した。
 
+beta12 rev.4
+・rev.3の修正にミスがあり、外部コマンドの裏セットが呼び出せなかったのを修正。
