--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -204,6 +204,7 @@ use_proxy=\u30d7\u30ed\u30ad\u30b7\u30fc\u30b5\u30fc\u30d0\u3092\u4f7f\u7528\u30
 proxy_host=\u30db\u30b9\u30c8\u540d
 proxy_port=\u30dd\u30fc\u30c8\u756a\u53f7
 filesystem=\u30d5\u30a1\u30a4\u30eb\u30b7\u30b9\u30c6\u30e0
+ftp_encoding=FTP\u30a8\u30f3\u30b3\u30fc\u30c7\u30a3\u30f3\u30b0
 
 rename_to_upper=\u534a\u89d2\u82f1\u5b57\u3092\u5927\u6587\u5b57\u306b
 rename_to_lower=\u534a\u89d2\u82f1\u5b57\u3092\u5c0f\u6587\u5b57\u306b
@@ -285,3 +286,5 @@ use_migemo=migemo\u3092\u4f7f\u7528\u3059\u308b
 inactive=\u975e\u30d5\u30a9\u30fc\u30ab\u30b9\u6642
 cursor_requires_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u30ab\u30fc\u30bd\u30eb\u306f\u8868\u793a\u3057\u306a\u3044
 change_color_with_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u6587\u5b57\u8272\u3092\u5909\u3048\u308b
+
+filter_regex=\u30d5\u30a3\u30eb\u30bf\u30fc\uff08\u6b63\u898f\u8868\u73fe\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u6539\u884c\u306f|\u306b\u7f6e\u304d\u63db\u3048\u3089\u308c\u307e\u3059\uff09
