--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -182,3 +182,10 @@ beta12 rev.3
 
 beta12 rev.4
 ・rev.3の修正にミスがあり、外部コマンドの裏セットが呼び出せなかったのを修正。
+
+beta13
+・フィルター文字列を指定可能にした。
+・外部コマンドの$P（カレントディレクトリ）が間違ってたので修正
+・ユーザー設定フォルダにaliase.xmlを配置すると、オリジナルの設定の追加設定として読み込むようにした。
+　　（キー設定の変更分だけ書いておいてください）
+・アーカイブ内でのファイルサイズ合計が正しくなかったのを修正した（アーカイブ自体のサイズを足していた）。
