--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -189,3 +189,14 @@ beta13
 ・ユーザー設定フォルダにaliase.xmlを配置すると、オリジナルの設定の追加設定として読み込むようにした。
 　　（キー設定の変更分だけ書いておいてください）
 ・アーカイブ内でのファイルサイズ合計が正しくなかったのを修正した（アーカイブ自体のサイズを足していた）。
+・Look and Feelを選択可能にした（再起動が必要）。
+・設定画面のレイアウトを変更した（SVGAあたりだと縦にはみ出るので、横長にした）
+・ルートの上に、ルートディレクトリを列挙する仮想ディレクトリを作成した。
+・表示列数の自動調整モードを追加した（設定した最小幅の列が収まる最大列数にします。6キー）
+・ツリーを実装した。Tキーでオープン。それに伴い、２画面モードでのカレントディレクトリ転送コマンド（T、Shift+T）がY、Shift+Yになります。
+・ディレクトリ選択ダイアログにもツリーボタンを追加。
+・ローカルファイルのパーミッション設定が可能になった（ただし、オーナーアクセスのREAD、WRITE、EXECUTEのみ。WindowsではWRITEのみ反映されます）
+・大きなファイルのコピー時に経過が正しく表示されない問題に対応。
+・長いファイル名のファイルを選択したときに、レイアウトが崩れる問題に対応
+・ドライブ容量のラベルの表示形式を変更（上の桁を優先して表示するようにした）
+・グラフィックビューアにマウスクリックすることでカーソルを前後移動できるモードを追加した（設定画面の「その他」タブから設定できます）
