--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta12 by Shunji.Y >>
+title=<< jFD2 beta13 by Shunji.Y >>
 
 ok=OK
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
@@ -141,7 +141,9 @@ temp_dir=\u4e00\u6642\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 user_conf_dir=\u30e6\u30fc\u30b6\u30fc\u8a2d\u5b9a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 path=\u30d1\u30b9
 path_notice=<html>\u30a8\u30c7\u30a3\u30bf\u30fc\u306e\u30d1\u30b9\u306b\u30b9\u30da\u30fc\u30b9\u304c\u542b\u307e\u308c\u308b\u5834\u5408\u3001\u30d1\u30b9\u3092\u300c"\u300d\u3067\u56f2\u3063\u3066\u304f\u3060\u3055\u3044\u3002<br>\u4f8b\uff1a<br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>\u3000\u3000\u3000\u2193<br>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"<br></html>
-shell_notice=<html>$C\uff1a\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>$Q\uff1a\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>$CQ\uff1a\u30b9\u30da\u30fc\u30b9\u304c\u3042\u308b\u5834\u5408\u306e\u307f\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>\u6539\u884c\u3067\u5225\u8981\u7d20\u3068\u3057\u3066\u30b7\u30a7\u30eb\u306b\u6e21\u3057\u307e\u3059\u3002</html>
+shell_notice=<html>$C\uff1a\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>$Q\uff1a\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>$CQ\uff1a\u30b9\u30da\u30fc\u30b9\u304c\u3042\u308b\u5834\u5408\u306e\u307f\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>\u6539\u884c\u3067\u5225\u8981\u7d20\u3068\u3057\u3066\u30b7\u30a7\u30eb\u306b\u6e21\u3057\u307e\u3059\u3002<br></html>
+appshell_notice=<html>$A\uff1a\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3<br>$P:\u30b9\u30da\u30fc\u30b9\u533a\u5207\u308a\u306e\u30d1\u30e9\u30e1\u30fc\u30bf<br>$PQ:\u30b9\u30da\u30fc\u30b9\u533a\u5207\u308a\u306e\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u304b\u3053\u3063\u305f\u30d1\u30e9\u30e1\u30fc\u30bf<br>$PN:\u6539\u884c\u533a\u5207\u308a\u306e\u30d1\u30e9\u30e1\u30fc\u30bf<br>$PNQ:\u30b9\u30da\u30fc\u30b9\u533a\u5207\u308a\u306e\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u304b\u3053\u3063\u305f\u30d1\u30e9\u30e1\u30fc\u30bf</html>
+$Q\uff1a\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>$CQ\uff1a\u30b9\u30da\u30fc\u30b9\u304c\u3042\u308b\u5834\u5408\u306e\u307f\u30c0\u30d6\u30eb\u30af\u30a9\u30fc\u30c8\u3067\u56f2\u3063\u305f\u5165\u529b\u30b3\u30de\u30f3\u30c9<br>\u6539\u884c\u3067\u5225\u8981\u7d20\u3068\u3057\u3066\u30b7\u30a7\u30eb\u306b\u6e21\u3057\u307e\u3059\u3002</html>
 grep_encode=GREP\u30b3\u30de\u30f3\u30c9\u6a19\u6e96\u30a8\u30f3\u30b3\u30fc\u30c9
 grep_all_encode=GREP\u30b3\u30de\u30f3\u30c9\u3067\u9078\u629e\u53ef\u80fd\u306a\u30a8\u30f3\u30b3\u30fc\u30c9
 etc=\u305d\u306e\u4ed6
@@ -192,6 +194,7 @@ next_frame=\u6b21\u306e\u30a6\u30a4\u30f3\u30c9\u30a6\u3092\u9078\u629e
 extension_mapper=\u95a2\u9023\u4ed8\u3051\u547c\u3073\u51fa\u3057\u30b3\u30de\u30f3\u30c9
 
 choose_from_quickaccess=QuickAccess\u3067\u9078\u629e (Alt+Q)
+choose_from_tree=\u30c4\u30ea\u30fc\u3067\u9078\u629e\uff08Alt+T)
 
 transfer_mode=\u8ee2\u9001\u30e2\u30fc\u30c9
 depends_extension=\u62e1\u5f35\u5b50\u306b\u3088\u3063\u3066\u5207\u308a\u66ff\u3048\u308b
@@ -288,3 +291,11 @@ cursor_requires_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u30ab\u30
 change_color_with_focus=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u6642\u306b\u6587\u5b57\u8272\u3092\u5909\u3048\u308b
 
 filter_regex=\u30d5\u30a3\u30eb\u30bf\u30fc\uff08\u6b63\u898f\u8868\u73fe\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u6539\u884c\u306f|\u306b\u7f6e\u304d\u63db\u3048\u3089\u308c\u307e\u3059\uff09
+
+look_and_feel=\u30eb\u30c3\u30af\u30a2\u30f3\u30c9\u30d5\u30a3\u30fc\u30eb\uff08\u8981\u518d\u8d77\u52d5\uff09
+platform_native=\u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u30cd\u30a4\u30c6\u30a3\u30d6
+
+min_column_width=\u6700\u5c0f\u306e\u5217\u5e45\uff08\u5217\u6570\u81ea\u52d5\u8abf\u6574\u30e2\u30fc\u30c9\u7528\uff09
+
+graphic_viewer_mouse_button_operate=\u30de\u30a6\u30b9\u30dc\u30bf\u30f3\u3067\u524d\u5f8c\u306e\u753b\u50cf\u3092\u8868\u793a\uff08\u30b0\u30e9\u30d5\u30a3\u30c3\u30af\u30d3\u30e5\u30fc\u30a2\uff09
+tree=\u30c4\u30ea\u30fc
