--- a/trunk/src/message_ja.properties
+++ b/trunk/src/message_ja.properties
@@ -59,3 +59,4 @@ smartfilelist_exists=\u540c\u540d\u306e\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a
 empty_file_source=\u691c\u7d22\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 message_delete_filelist_file=<html>\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3057\u307e\u3059<br>\uff08\u30d5\u30a1\u30a4\u30eb\u306e\u5b9f\u4f53\u306f\u524a\u9664\u3055\u308c\u307e\u305b\u3093\uff09</html>
 input_slideshow_interval=\u30b9\u30e9\u30a4\u30c9\u30b7\u30e7\u30fc\u306e\u9593\u9694\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff08\u5358\u4f4d\uff1a\u79d2\uff09
+fail_set_permission=\u6a29\u9650\u8a2d\u5b9a\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
