--- a/trunk/doc/history.txt
+++ b/trunk/doc/history.txt
@@ -195,8 +195,8 @@ beta13
 ・表示列数の自動調整モードを追加した（設定した最小幅の列が収まる最大列数にします。6キー）
 ・ツリーを実装した。Tキーでオープン。それに伴い、２画面モードでのカレントディレクトリ転送コマンド（T、Shift+T）がY、Shift+Yになります。
 ・ディレクトリ選択ダイアログにもツリーボタンを追加。
-・ローカルファイルのパーミッション設定が可能になった（ただし、オーナーアクセスのREAD、WRITE、EXECUTEのみ。WindowsではWRITEのみ反映されます）
+・ローカルファイルのパーミッション設定が可能になった（ただし、Java6以降で、オーナーアクセスのREAD、WRITE、EXECUTEのみ。WindowsではWRITEのみ反映されます）
 ・大きなファイルのコピー時に経過が正しく表示されない問題に対応。
-・長いファイル名のファイルを選択したときに、レイアウトが崩れる問題に対応
+・長いファイル名のファイルを選択したときに、レイアウトが崩れる問題に対応（Macでは未解決）
 ・ドライブ容量のラベルの表示形式を変更（上の桁を優先して表示するようにした）
 ・グラフィックビューアにマウスクリックすることでカーソルを前後移動できるモードを追加した（設定画面の「その他」タブから設定できます）
