--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta14 by Shunji.Y >>
+title=<< jFD2 beta15 by Shunji.Y >>
 
 ok=OK
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
@@ -52,6 +52,7 @@ open_new_tab=\u65b0\u3057\u3044\u30bf\u30d6\u3092\u958b\u304f\uff08\u5de6)
 open_sub_tab=\u65b0\u3057\u3044\u30bf\u30d6\u3092\u958b\u304f\uff08\u53f3)
 new_window=\u65b0\u3057\u3044\u30a6\u30a4\u30f3\u30c9\u30a6\u3092\u958b\u304f
 exit=\u9589\u3058\u308b
+exit_all=\u3059\u3079\u3066\u9589\u3058\u308b
 edit=\u7de8\u96c6
 mark_menu=\u30de\u30fc\u30af
 mark_this_file=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30de\u30fc\u30af
