--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta15 by Shunji.Y >>
+title=<< jFD2 beta16 by Shunji.Y >>
 
 ok=OK
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
@@ -300,3 +300,6 @@ min_column_width=\u6700\u5c0f\u306e\u5217\u5e45\uff08\u5217\u6570\u81ea\u52d5\u8
 
 graphic_viewer_mouse_button_operate=\u30de\u30a6\u30b9\u30dc\u30bf\u30f3\u3067\u524d\u5f8c\u306e\u753b\u50cf\u3092\u8868\u793a\uff08\u30b0\u30e9\u30d5\u30a3\u30c3\u30af\u30d3\u30e5\u30fc\u30a2\uff09
 tree=\u30c4\u30ea\u30fc
+text_viewer_editable=\u30c6\u30ad\u30b9\u30c8\u30d3\u30e5\u30fc\u30a2\u3092\u7de8\u96c6\u53ef\u80fd\u306b\u3059\u308b\uff08Linux\u7248Java\u306e\u30d0\u30b0\u5bfe\u5fdc\u7528\uff09
+
+console=\u30b3\u30f3\u30bd\u30fc\u30eb
