beta17向けベータ17

--- a/trunk/release/history.txt
+++ b/trunk/release/history.txt
@@ -246,3 +246,13 @@ beta16
 ・設定画面に、テキストエディタの編集可否（Linux版Javaのバグの回避のため）、ターミナル表示コマンドの設定を追加しました。
 ・アイコンを設定しました。
 ・「[」キーでインクリメンタルサーチを開始できるようにしました（英語キーボード向け）
+・一時ディレクトリが正しく設定されないバグを修正しました。過去のバージョンを使用していて一時ディレクトリが正しく設定されていない場合は、手動で設定してください。
+
+beta17
+・2画面モードでのファンクションキーパネルのバグに対応
+・ファイルリスト、スマートファイルリストをそれぞれ、「仮想ディレクトリ」「スマートディレクトリ」に名称変更（語呂が悪いし意味わからないんで）。合わせて、仮想ディレクトリ作成コマンドをShift+FからShift+Vに変更した。
+・サムネイルの作成速度を高速化した
+・テキストビューアで右クリックからのコピーが動作してなかったので修正
+・Attrコマンドのダイアログを全面的に作り直し。タイムスタンプ設定も追加。
+・FTPで日本語ファイル名が正しく扱えてなかったのを修正
+・タグ機能を追加（Attrコマンド（Aキー）から設定、Shift+Fで検索）
