--- a/trunk/src/label_ja.properties
+++ b/trunk/src/label_ja.properties
@@ -59,6 +59,7 @@ mark_this_file=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30de\u30fc\u30af
 mark-all=\u5168\u3066\u9078\u629e
 mark-reverse=\u9078\u629e\u3092\u53cd\u8ee2\u3059\u308b
 find=\u30d5\u30a1\u30a4\u30eb\u306e\u691c\u7d22
+find_tag=\u30bf\u30b0\u691c\u7d22
 grep=Grep
 view=\u8868\u793a
 incremental_search=\u30a4\u30f3\u30af\u30ea\u30e1\u30f3\u30bf\u30eb\u30b5\u30fc\u30c1
@@ -272,8 +273,8 @@ file_source=\u691c\u7d22\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 search_condition=\u691c\u7d22\u6761\u4ef6
 max_count=\u6700\u5927\u4ef6\u6570\uff08\u30c7\u30d5\u30a9\u30eb\u30c8\u3067\u7121\u9650\uff09
 
-register_smart_filelist=\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u4f5c\u6210
-register_filelist=\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u4f5c\u6210
+register_smart_filelist=\u30b9\u30de\u30fc\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u4f5c\u6210
+register_filelist=\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u4f5c\u6210
 change_dot_file_visible=\u96a0\u3057\u30d5\u30a1\u30a4\u30eb\u8868\u793a\u5207\u308a\u66ff\u3048
 
 find_condition=\u30d5\u30a1\u30a4\u30eb\u540d
@@ -303,3 +304,23 @@ tree=\u30c4\u30ea\u30fc
 text_viewer_editable=\u30c6\u30ad\u30b9\u30c8\u30d3\u30e5\u30fc\u30a2\u3092\u7de8\u96c6\u53ef\u80fd\u306b\u3059\u308b\uff08Linux\u7248Java\u306e\u30d0\u30b0\u5bfe\u5fdc\u7528\uff09
 
 console=\u30b3\u30f3\u30bd\u30fc\u30eb
+
+permission=\u6a29\u9650
+timestamp=\u30bf\u30a4\u30e0\u30b9\u30bf\u30f3\u30d7
+
+permission_readable=\u8aad\u53d6
+permission_writable=\u66f8\u8fbc
+permission_executable=\u5b9f\u884c
+
+access_normal=\u4e00\u822c
+access_group=\u30b0\u30eb\u30fc\u30d7
+access_owner=\u30aa\u30fc\u30ca\u30fc
+
+tag=\u30bf\u30b0
+add_tag=\u30bf\u30b0\u8ffd\u52a0
+
+clean_tag_db=\u4e0d\u8981\u30bf\u30b0\u306e\u524a\u9664
+execute=\u5b9f\u884c
+
+attribute=\u5c5e\u6027\u8a2d\u5b9a
+clean_tag_db=\u30bf\u30b0\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u6574\u7406
