--- a/trunk/src/message_ja.properties
+++ b/trunk/src/message_ja.properties
@@ -50,14 +50,18 @@ message_repeated_filename=\u30d5\u30a1\u30a4\u30eb\u540d\u304c\u91cd\u8907\u3057
 input_plugin_path=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b\u30d7\u30e9\u30b0\u30a4\u30f3\u306e\u30d1\u30b9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 input_script_path=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b\u30b9\u30af\u30ea\u30d7\u30c8\u306e\u30d1\u30b9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 delete_failed=<html>\u30d5\u30a1\u30a4\u30eb\u306e\u524a\u9664\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002<br>{0}</html>
-opens_as_smart_file_list=\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u7de8\u96c6\u753b\u9762\u3067\u958b\u304d\u307e\u3059\u304b\uff1f
-input_filelist_name=<html>\u9078\u629e\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb\u3067\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002<br>\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
-filelist_exists=<html>\u540c\u540d\u306e\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059\u3002<br>\u8ffd\u8a18\u3057\u307e\u3059\u304b\uff1f</html>
-filelist_created=\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3057\u305f\u3002
-input_smartfilelist_name=<html>\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002<br>\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
-smartfilelist_exists=\u540c\u540d\u306e\u30b9\u30de\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059\u3002
+opens_as_smart_file_list=\u30b9\u30de\u30fc\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u7de8\u96c6\u753b\u9762\u3067\u958b\u304d\u307e\u3059\u304b\uff1f
+input_filelist_name=<html>\u9078\u629e\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb\u3067\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002<br>\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+filelist_exists=<html>\u540c\u540d\u306e\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059\u3002<br>\u8ffd\u8a18\u3057\u307e\u3059\u304b\uff1f</html>
+filelist_created=\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u4f5c\u6210\u3057\u307e\u3057\u305f\u3002
+input_smartfilelist_name=<html>\u30b9\u30de\u30fc\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002<br>\u30b9\u30de\u30fc\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+smartfilelist_exists=\u540c\u540d\u306e\u30b9\u30de\u30fc\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059\u3002
 empty_file_source=\u691c\u7d22\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-message_delete_filelist_file=<html>\u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3057\u307e\u3059<br>\uff08\u30d5\u30a1\u30a4\u30eb\u306e\u5b9f\u4f53\u306f\u524a\u9664\u3055\u308c\u307e\u305b\u3093\uff09</html>
+message_delete_filelist_file=<html>\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3057\u307e\u3059<br>\uff08\u30d5\u30a1\u30a4\u30eb\u306e\u5b9f\u4f53\u306f\u524a\u9664\u3055\u308c\u307e\u305b\u3093\uff09</html>
 input_slideshow_interval=\u30b9\u30e9\u30a4\u30c9\u30b7\u30e7\u30fc\u306e\u9593\u9694\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff08\u5358\u4f4d\uff1a\u79d2\uff09
 fail_set_permission=\u6a29\u9650\u8a2d\u5b9a\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
 broken_tab_config=<html>\u8a2d\u5b9a\u30d5\u30a1\u30a4\u30eb\u304c\u58ca\u308c\u3066\u3044\u307e\u3059\u3002jFD2\u3092\u7d42\u4e86\u3057\u307e\u3059\u3002<br>\u8a2d\u5b9a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u524a\u9664\u3057\u3066\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+message_tag_find=\u691c\u7d22\u3059\u308b\u30bf\u30b0\u540d\u79f0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff08*:\u30ef\u30a4\u30eb\u30c9\u30ab\u30fc\u30c9\uff09
+input_new_tag=\u30bf\u30b0\u540d\u79f0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
+message_clean_tag_db=\u30d5\u30a1\u30a4\u30eb\u306e\u5b58\u5728\u3057\u306a\u3044\u4e0d\u8981\u30bf\u30b0\u3092\u524a\u9664\u3057\u307e\u3059
+message_clean_tag_db_finished=\u5b8c\u4e86
