--- a/trunk/trunk/src/main/resources/label_ja.properties
+++ b/trunk/trunk/src/main/resources/label_ja.properties
@@ -26,6 +26,15 @@ title_rename=jFD2 - Rename
 title_pack=jFD2 - Pack
 title_unpack=jFD2 - Unpack
 title_incremental_search=jFD2 - Incremental Search
+title_copy=jFD2 - Copy
+title_move=jFD2 - Move
+title_mkdir=jFD2 - Mkdir
+title_newfile=jFD2 - New File
+title_delete=jFD2 - Delete
+title_find=jFD2 - Find
+title_grep=jFD2 - Grep
+title_logdsk=jFD2 - Logical Disk
+title_shell=jFD2 - Shell
 
 copy_new_name=\u540d\u524d\u3092\u5909\u3048\u3066\u30b3\u30d4\u30fc
 copy_if_newer=\u65e5\u4ed8\u304c\u65b0\u3057\u3044\u5834\u5408\u30b3\u30d4\u30fc
@@ -328,3 +337,5 @@ attribute=\u5c5e\u6027\u8a2d\u5b9a
 clean_tag_db=\u30bf\u30b0\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u6574\u7406
 
 text_viewer=\u30c6\u30ad\u30b9\u30c8\u30d3\u30e5\u30fc\u30a2
+
+delete_ok_default=\u524a\u9664\u6642\u306b\u30c7\u30d5\u30a9\u30eb\u30c8\u3067OK\u3092\u9078\u629e\u3059\u308b
