--- a/trunk/docs/history.txt
+++ b/trunk/docs/history.txt
@@ -271,11 +271,15 @@ beta19
 ・設定ファイルのキャッシュを導入し、多少高速化した。
 ・tar、gzip、bzip2に対応した（Lei氏のコード提供。感謝）
 
-beta20
+1.00 
 ・tar、gzip、bzip2の実装をリライトした（せっかく書いてもらったのにすみませんです、Lei氏）
 ・Groovyのバインディングに"console"を追加（実体はcom.nullfish.app.jfd2.ext_command.window.ConsoleFrame）。console.print(foo)やconsole.println(bar)で出力が出来ます。
 ・Groovyのコンパイル失敗時のエラーメッセージ等を独自コンソールに出力するようにした
 ・Groovyのキャッシュを追加した（2chjFD2スレ489氏、ありがとうございます）
 ・外部コマンドとして登録したコマンドを実行するCommandクラスを追加（com.nullfish.app.jfd2.command.embed.ExternalCommand）。2chのjFD2スレ、486氏ありがとうございます。キーに割り振っては居ないので、設定のカスタマイズで使用してください。
 ・ダイアログにタイトルを設定（漏れがあったら報告お願いします）	
-
+・タグを振ったファイルの親ディレクトリを移動する際に、タグが移動されてなかったバグを修正
+・Macで設定画面を閉じた際にフォーカスが消えるバグを修正
+・カーソルキー左右による親ディレクトリ移動、アクティブなペインのフォーカス移動のオンオフ設定を分離した。
+・ファイル移動で、ディレクトリ構成を無視しての移動が出来なくなっていたバグに対応
+・スマートフォルダが使えなくなって他のを修正
