--- a/trunk/src/main/resources/label_ja.properties
+++ b/trunk/src/main/resources/label_ja.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta19 by Shunji.Y >>
+title=<< jFD2 1.00 by Shunji.Y >>
 
 ok=OK
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
@@ -339,3 +339,7 @@ clean_tag_db=\u30bf\u30b0\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u6574\u7406
 text_viewer=\u30c6\u30ad\u30b9\u30c8\u30d3\u30e5\u30fc\u30a2
 
 delete_ok_default=\u524a\u9664\u6642\u306b\u30c7\u30d5\u30a9\u30eb\u30c8\u3067OK\u3092\u9078\u629e\u3059\u308b
+
+go_parent_cursor=\u30ab\u30fc\u30bd\u30eb\u5de6\u53f3\u3067\u89aa\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u79fb\u52d5\u3092\u3059\u308b
+pane_change_cursor=\u30ab\u30fc\u30bd\u30eb\u5de6\u53f3\u3067\u30a2\u30af\u30c6\u30a3\u30d6\u30da\u30a4\u30f3\u306e\u5207\u308a\u66ff\u3048\u3092\u3059\u308b
+zip_password=\u30d1\u30b9\u30ef\u30fc\u30c9\uff08ZIP\u3067\u306e\u307f\u6709\u52b9\uff09
