--- a/trunk/trunk/release/history.txt
+++ b/trunk/trunk/release/history.txt
@@ -265,7 +265,12 @@ beta18
 ・ファイル名表示の改善
 ・F12が効かなくなっていたのを修正
 
-beta19
+1.00
 ・テキストビューアの文字色を単独で指定可能にした。
 ・FTPファイルの属性設定時にエラーが発生していたのを修正（タイムスタンプを設定しようとしていたがFTPファイルにはタイムスタンプ設定が無いため失敗していた）
 ・tar、gzip、bzip2に対応した（Leiさん、コード提供ありがとうございました)
+
+1.01
+・MacでCtrl-Qで終了した際に設定が保存されない問題に対処した。
+・ファイル名が長すぎて表示できない場合でも、拡張子はかならず表示するようにした。まるパラさん提供のスクリプトを元に実装しました。ありがとうございました。
+・Macで一括リネーム画面表示後フォーカスが失われる問題に対処した。
