--- a/trunk/trunk/src/main/resources/message_ja.properties
+++ b/trunk/trunk/src/main/resources/message_ja.properties
@@ -60,8 +60,9 @@ empty_file_source=\u691c\u7d22\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u5165\u
 message_delete_filelist_file=<html>\u4eee\u60f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3057\u307e\u3059<br>\uff08\u30d5\u30a1\u30a4\u30eb\u306e\u5b9f\u4f53\u306f\u524a\u9664\u3055\u308c\u307e\u305b\u3093\uff09</html>
 input_slideshow_interval=\u30b9\u30e9\u30a4\u30c9\u30b7\u30e7\u30fc\u306e\u9593\u9694\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff08\u5358\u4f4d\uff1a\u79d2\uff09
 fail_set_permission=\u6a29\u9650\u8a2d\u5b9a\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
-broken_tab_config=<html>\u8a2d\u5b9a\u30d5\u30a1\u30a4\u30eb\u304c\u58ca\u308c\u3066\u3044\u307e\u3059\u3002jFD2\u3092\u7d42\u4e86\u3057\u307e\u3059\u3002<br>\u8a2d\u5b9a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u524a\u9664\u3057\u3066\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+broken_tab_config=<html>\u8a2d\u5b9a\u30d5\u30a1\u30a4\u30eb\u304c\u58ca\u308c\u3066\u308b\u304b\u30ed\u30c3\u30af\u3055\u308c\u3066\u308b\u305f\u3081\u306b\u4f7f\u7528\u4e0d\u80fd\u3067\u3059\u3002<br>jFD2\u3092\u7d42\u4e86\u3057\u307e\u3059\u3002<br>\u8a2d\u5b9a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u524a\u9664\u3057\u3066\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
 message_tag_find=\u691c\u7d22\u3059\u308b\u30bf\u30b0\u540d\u79f0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff08*:\u30ef\u30a4\u30eb\u30c9\u30ab\u30fc\u30c9\uff09
 input_new_tag=\u30bf\u30b0\u540d\u79f0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 message_clean_tag_db=\u30d5\u30a1\u30a4\u30eb\u306e\u5b58\u5728\u3057\u306a\u3044\u4e0d\u8981\u30bf\u30b0\u3092\u524a\u9664\u3057\u307e\u3059
 message_clean_tag_db_finished=\u5b8c\u4e86
+input_extension=\u62e1\u5f35\u5b50\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
