--- a/trunk/src/main/resources/label_ja.properties
+++ b/trunk/src/main/resources/label_ja.properties
@@ -343,3 +343,5 @@ delete_ok_default=\u524a\u9664\u6642\u306b\u30c7\u30d5\u30a9\u30eb\u30c8\u3067OK
 go_parent_cursor=\u30ab\u30fc\u30bd\u30eb\u5de6\u53f3\u3067\u89aa\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u79fb\u52d5\u3092\u3059\u308b
 pane_change_cursor=\u30ab\u30fc\u30bd\u30eb\u5de6\u53f3\u3067\u30a2\u30af\u30c6\u30a3\u30d6\u30da\u30a4\u30f3\u306e\u5207\u308a\u66ff\u3048\u3092\u3059\u308b
 zip_password=\u30d1\u30b9\u30ef\u30fc\u30c9\uff08ZIP\u3067\u306e\u307f\u6709\u52b9\uff09
+
+extension_color=\u62e1\u5f35\u5b50\u3054\u3068\u306e\u8868\u793a\u8272
