--- a/trunk/trunk/src/main/resources/label_ja.properties
+++ b/trunk/trunk/src/main/resources/label_ja.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 1.00 by Shunji.Y >>
+title=<< jFD2 1.01 by Shunji.Y >>
 
 ok=OK
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
@@ -104,6 +104,7 @@ move=\u79fb\u52d5
 copy_current_dir=\u73fe\u5728\u306e\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u540d\u3092\u30b3\u30d4\u30fc
 shell=\u30b7\u30a7\u30eb
 app_shell=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u7528\u30b7\u30a7\u30eb
+open_dir_command=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30aa\u30fc\u30d7\u30f3\u30b3\u30de\u30f3\u30c9
 execute_menu=\u5b9f\u884c
 execute=\u30d5\u30a1\u30a4\u30eb\u3092\u5b9f\u884c
 remote_execute=\u30ea\u30e2\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u3092\u30b3\u30d4\u30fc\u3057\u3066\u5b9f\u884c
