--- a/trunk/src/main/resources/label_ja.properties
+++ b/trunk/src/main/resources/label_ja.properties
@@ -128,6 +128,7 @@ password=\u30d1\u30b9\u30ef\u30fc\u30c9
 appearance=\u8868\u793a
 font=\u30d5\u30a9\u30f3\u30c8
 font_sample=Aa\u3042\u3041\u30a2\u30a1\u4e9c\u5b57
+dialog_font=\u30c0\u30a4\u30a2\u30ed\u30b0\u30d5\u30a9\u30f3\u30c8
 modify=\u5909\u66f4
 read_only=\u30ea\u30fc\u30c9\u30aa\u30f3\u30ea\u30fc
 sub_directory=\u30b5\u30d6\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
