--- a/trunk/src/main/resources/label_ja.properties
+++ b/trunk/src/main/resources/label_ja.properties
@@ -150,6 +150,7 @@ editor=\u30a8\u30c7\u30a3\u30bf\u30fc
 script_dir=\u30b9\u30af\u30ea\u30d7\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 plugin_dir=\u30d7\u30e9\u30b0\u30a4\u30f3\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 shortcut_dir=\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
+lib_dir=\u30af\u30e9\u30b9\u30d1\u30b9\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 temp_dir=\u4e00\u6642\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 user_conf_dir=\u30e6\u30fc\u30b6\u30fc\u8a2d\u5b9a\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 path=\u30d1\u30b9
@@ -240,6 +241,7 @@ new_filename=\u5909\u63db\u5f8c
 
 go_plugin_dir=\u30d7\u30e9\u30b0\u30a4\u30f3\u7ba1\u7406
 go_script_dir=\u30b9\u30af\u30ea\u30d7\u30c8\u7ba1\u7406
+go_lib_dir=\u30af\u30e9\u30b9\u30d1\u30b9\u7ba1\u7406
 import_plugin=\u30d7\u30e9\u30b0\u30a4\u30f3\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 import_script=\u30b9\u30af\u30ea\u30d7\u30c8\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 change_thumbnail_mode=\u30b5\u30e0\u30cd\u30a4\u30eb\u8868\u793a\u5207\u308a\u66ff\u3048
