--- a/trunk/trunk/src/main/resources/label_ja.properties
+++ b/trunk/trunk/src/main/resources/label_ja.properties
@@ -203,7 +203,7 @@ sort_reverse=\u30bd\u30fc\u30c8\u9806\u3092\u53cd\u8ee2
 change_split=\u5206\u5272\u65b9\u5411\u306e\u5909\u66f4\uff08\u7e26\u6a2a\uff09
 next_tab=\u6b21\u306e\u30bf\u30d6\u3092\u9078\u629e
 prev_tab=\u524d\u306e\u30bf\u30d6\u3092\u9078\u629e
-focus_oponent=\u53cd\u5bfe\u5074\u306e\u30bf\u30d6\u3092\u9078\u629e
+focus_opponent=\u53cd\u5bfe\u5074\u306e\u30bf\u30d6\u3092\u9078\u629e
 next_frame=\u6b21\u306e\u30a6\u30a4\u30f3\u30c9\u30a6\u3092\u9078\u629e
 extension_mapper=\u95a2\u9023\u4ed8\u3051\u547c\u3073\u51fa\u3057\u30b3\u30de\u30f3\u30c9
 
